unpackaged/main/default/objects/Org_Connection__c/Org_Connection__c.object-meta.xml
<CustomObject>
    <label>Org Connection</label>
    <nameField>
        <label>Org Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>