unpackaged/main/default/objects/Org_Connection__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Org Connections</relationshipLabel>
    <relationshipName>Org_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>