unpackaged/main/default/objects/Org_Connection__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Org Connections</relationshipLabel>
    <relationshipName>Org_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>