unpackaged/main/default/objects/Org_Connection__c/fields/Org_Username__c.field-meta.xml
<CustomField>
    <fullName>Org_Username__c</fullName>
    <externalId>true</externalId>
    <label>Org Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>