unpackaged/main/default/objects/Org_Connection__c/validationRules/Must_have_Lead_or_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_Lead_or_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Lead__c) &amp;&amp; ISNULL(Contact__c)</errorConditionFormula>
    <errorMessage>Must have an associated lead or contact</errorMessage>
</ValidationRule>